# practice

./: CMakeLists.txt  bin_hex.c  casting.c
arrays/: CMakeLists.txt
arrays/exe/: array2d_examples.c  array_examples.c
arrays/include/arrays/: array.h
arrays/src/: arrays.c
pointers/: CMakeLists.txt  pointer_increment.c
simd/: CMakeLists.txt  simple_squaring.c
strings/: CMakeLists.txt  concatenate_two_strings.c  remove_whitespace.c  string_compare.c
